# smw-utils

./: .gitmodules  CMakeLists.txt  README.md
cmake/: GenerateCompilerH.cmake  macs.cmake
cmake/include/: compiler.h.cmakein
